--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="index.js" type="module" defer></script>
 </head>
 
 <body>
-
+    <h1>Battleship</h1>
+    <div class="left"></div>
+    <div class="right"></div>
 </body>
 
 </html>
