Add emojis for fun

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Battleship</h1>
+    <h1>🚢 Battleship 🚢</h1>
     <div class="container">
         <div class="left">
             <div class="grid">
