Add ship placement display

--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,36 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
             </div>
+            <div class="ships">
+                <div class="ship-grid">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+
+                <div class="ship-grid four">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="ship-grid three">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="ship-grid three">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="ship-grid two">
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
         </div>
         <div class="right">
             <div class="grid">
