Add drag and drop ship placement
For now, there is still a default layout of ships when launching the
game. It is not possible to rotate the ships yet.

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
                 <div class="cell"></div>
             </div>
             <div class="ships">
-                <div class="ship-grid">
+                <div class="ship-grid" draggable="true">
                     <div></div>
                     <div></div>
                     <div></div>
@@ -124,23 +124,23 @@
                     <div></div>
                 </div>
 
-                <div class="ship-grid four">
+                <div class="ship-grid four" draggable="true">
                     <div></div>
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="ship-grid three">
+                <div class="ship-grid three" draggable="true">
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="ship-grid three">
+                <div class="ship-grid three" draggable="true">
                     <div></div>
                     <div></div>
                     <div></div>
                 </div>
-                <div class="ship-grid two">
+                <div class="ship-grid two" draggable="true">
                     <div></div>
                     <div></div>
                 </div>
