Implement manual ship placement on gameboard

--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,7 @@
                     <div></div>
                 </div>
             </div>
+            <button>Confirm Ship Placement</button>
         </div>
         <div class="right">
             <div class="grid">
@@ -248,6 +249,36 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
             </div>
+            <div class="ships">
+                <div class="ship-grid" draggable="true">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="ship-grid four" draggable="true">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="ship-grid three" draggable="true">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="ship-grid three" draggable="true">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="ship-grid two" draggable="true">
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <button>Confirm Ship Placement</button>
         </div>
     </div>
 </body>
