Implement turn by turn ship placement

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
                     <div></div>
                 </div>
             </div>
-            <button>Confirm Ship Placement</button>
+            <button class="confirm-placement" disabled>Confirm Ship Placement</button>
         </div>
         <div class="right">
             <div class="grid">
@@ -278,7 +278,7 @@
                     <div></div>
                 </div>
             </div>
-            <button>Confirm Ship Placement</button>
+            <button class="confirm-placement" disabled>Confirm Ship Placement</button>
         </div>
     </div>
 </body>
