Add player selection overlay

--- a/src/index.html
+++ b/src/index.html
@@ -281,6 +281,25 @@
             <button class="confirm-placement" disabled>Confirm Ship Placement</button>
         </div>
     </div>
+    <div class="overlay" id="player-options">
+        <h1>🚢 Battleship 🚢</h1>
+        <p>Select players</p>
+        <div class="container">
+            <p>Player 1:</p>
+            <select name="p1" id="p1">
+                <option value="human">Human</option>
+                <option value="computer">Computer</option>
+            </select>
+        </div>
+        <div class="container">
+            <p>Player 2:</p>
+            <select name="p2" id="p2">
+                <option value="human">Human</option>
+                <option value="computer">Computer</option>
+            </select>
+        </div>
+        <button id="start-game">Start Game</button>
+    </div>
 </body>
 
 </html>
