Add turn change overlay for 2 human player games

--- a/src/index.html
+++ b/src/index.html
@@ -300,6 +300,11 @@
         </div>
         <button id="start-game">Start Game</button>
     </div>
+    <div class="overlay" id="change-turn">
+        <h1>🚢 Battleship 🚢</h1>
+        <p>Pass the controls to <span class="next-player">Player 1</span></p>
+        <button id="continue">Continue</button>
+    </div>
 </body>
 
 </html>
