--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="index.js" type="module" defer></script>
+    <link rel="stylesheet" href="./src/styles.css">
+    <script src="./src/index.js" type="module" defer></script>
 </head>
 
 <body>
